# exercise4

./: CMakeLists.txt
include/: memory_resources.h  queue_functions.h
src/: main.c  memory_resources.c  queue_functions.c
